--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link id="theme" href="css/light.css" rel="stylesheet" />
 
 		<script src="common/build/three.js"></script>
+		<script src="common/build/jquery.min.js"></script>
 		<script src="common/js/libs/system.min.js"></script>
 
 		<script src="common/js/controls/EditorControls.js"></script>
