add Api.js and others

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 		<script src="js/Config.js"></script>
 		<script src="js/History.js"></script>
 		<script src="js/Loader.js"></script>
+		<script src="js/Api.js"></script>
 		<script src="js/Menubar.js"></script>
 		<script src="js/Menubar.File.js"></script>
 		<script src="js/Menubar.Edit.js"></script>
