--- a/js/libs/app/index.html
+++ b/js/libs/app/index.html
@@ -17,6 +17,7 @@
 	</head>
 	<body ontouchstart="">
 		<script src="js/three.min.js"></script>
+		<script src="js/EditorControls.js"></script>
 		<script src="js/app.js"></script>
 		<!-- includes -->
 		<script>
