add ObjectHelper and update threejs r104

--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
 		<script src="js/libs/html2canvas.js"></script>
 		<script src="js/libs/three.html.js"></script>
 
+		<script src="js/objectHelper/ObjectHelper.js"></script>
+		<script src="js/objectHelper/ObjectHelper.Dot.js"></script>
+		<script src="js/objectHelper/ObjectHelper.Line.js"></script>
+		<script src="js/objectHelper/ObjectHelper.Text.js"></script>
+
 		<script>
 
 			window.URL = window.URL || window.webkitURL;
