--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="common/js/libs/system.min.js"></script>
 
 		<script src="common/js/controls/EditorControls.js"></script>
+		<script src="common/js/controls/PointerLockControls.js"></script>
 		<script src="common/js/controls/TransformControls.js"></script>
 
 		<script src="common/js/libs/jszip.min.js"></script>
