增加定位相机的录制和播放，修改播放功能为单独的页面，播放和发布的环境基本一致

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="css/main.css" rel="stylesheet" />
 		<link id="theme" href="css/light.css" rel="stylesheet" />
 
-		<script src="common/build/three.js"></script>
+		<script src="common/build/three105.min.js"></script>
 		<script src="common/build/jquery.min.js"></script>
 		<script src="common/js/libs/system.min.js"></script>
 
@@ -271,6 +271,7 @@
 				signals.sceneGraphChanged.add( saveState );
 				signals.scriptChanged.add( saveState );
 				signals.historyChanged.add( saveState );
+				signals.cameraSetupLocated.add( saveState );
 
 				signals.showModal.add( function ( content ) {
 
