--- a/js/libs/app/index.html
+++ b/js/libs/app/index.html
@@ -50,10 +50,15 @@
 
 				var player = new APP.Player();
 				player.load( JSON.parse( text ) );
+
 				player.setSize( window.innerWidth, window.innerHeight );
+				player.setSizeMini( window.innerWidth * 0.2, window.innerHeight * 0.2 );
+
 				player.play();
 
 				document.body.insertBefore( player.dom, document.getElementById( 'buttons' ) );
+				document.body.insertBefore( player.domMini, document.getElementById( 'buttons' ) );
+				player.domMini.style.cssText = 'position: absolute; bottom: 0; left: 0; border: 1px solid #fff;';
 
 				var cameraRecord = player.getCameraRecord();
 
@@ -82,7 +87,10 @@
 				} );
 
 				window.addEventListener( 'resize', function () {
+
 					player.setSize( window.innerWidth, window.innerHeight );
+					player.setSizeMini( window.innerWidth * 0.2, window.innerHeight * 0.2 );
+
 				} );
 
 			} );
