--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
 				signals.scriptChanged.add( saveState );
 				signals.historyChanged.add( saveState );
 				signals.cameraSetupLocated.add( saveState );
+				signals.projectChanged.add( saveState );
 
 				signals.showModal.add( function ( content ) {
 
