--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 		<script src="js/objectHelper/ObjectHelper.Dot.js"></script>
 		<script src="js/objectHelper/ObjectHelper.Line.js"></script>
 		<script src="js/objectHelper/ObjectHelper.Text.js"></script>
+		<script src="js/objectHelper/ObjectHelper.Plane.js"></script>
 
 		<script>
 
